# cooplan-microservice-template

./: Cargo.toml
.github/workflows/: build.yml  ci.yml  integration.yml
src/: error.rs  main.rs
src/api/: mod.rs  registration.rs
src/api/elements/: example.rs
src/api/input/: registration.rs
src/api/input/elements/: example.rs
src/api/output/: registration.rs
src/config/: config.rs
src/logic/: init.rs  logic_request.rs  mod.rs  storage_request.rs
src/logic/actions/: example_logic_action.rs  example_storage_action.rs  mod.rs
src/logic/elements/: example.rs
src/storage/: init.rs  mod.rs  mongodb_request_dispatch.rs
src/storage/executors/: mod.rs  mongodb_example.rs
