[package]
name = "cooplan-microservice-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Proprietary dependencies
cooplan-definitions-lib = "0.1.6"
cooplan-definition-schema-validator = "0.1.1"
cooplan-amqp-api = "0.1.1"
cooplan-mongodb = "0.1.0"

# JSON Serialization
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"

# Logging
log = "0.4.17"
simple_logger = "4.0.0"

# Asynchronous runtime & utilities
tokio = { version = "1", features = ["full"] }

tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"

async-channel = "1.8.0"
async-trait = "0.1.58"

# Token
jsonwebtoken = "8"

# AMQP
lapin = "2.1"

#MongoDB
mongodb = "2.3.1"
